--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,12 @@
 {
-    "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\Users\\I538894\\Downloads\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib\\javafx.base.jar",
-        "c:\\Users\\I538894\\Downloads\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib\\javafx.controls.jar",
-        "c:\\Users\\I538894\\Downloads\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib\\javafx.fxml.jar",
-        "c:\\Users\\I538894\\Downloads\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib\\javafx.graphics.jar",
-        "c:\\Users\\I538894\\Downloads\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib\\javafx.media.jar",
-        "c:\\Users\\I538894\\Downloads\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib\\javafx.swing.jar",
-        "c:\\Users\\I538894\\Downloads\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib\\javafx.web.jar",
-        "c:\\Users\\I538894\\Downloads\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar"
-    ]
+  "java.project.referencedLibraries": [
+    "lib/javafx.base.jar",
+    "lib/javafx.controls.jar",
+    "lib/javafx.fxml.jar",
+    "lib/javafx.graphics.jar",
+    "lib/javafx.media.jar",
+    "lib/javafx.swing.jar",
+    "lib/javafx.web.jar",
+    "lib/javafx-swt.jar"
+  ]
 }
